# pyvacs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/helloworld/: README.md  helloworld.asm
src/pyvacs/: __init__.py  assembler.py  cli.py  disassembler.py  isa.py  lexer.py
tests/: conftest.py  test_assembler.py  test_cli.py  test_disassembler.py  test_emulator_integration.py  test_isa.py  test_lexer.py  test_roms.py  test_roundtrip.py
